--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -57,3 +57,17 @@
         color: #fff;
     }
 }
+
+@media screen and (max-width: 600px) {
+    .container {
+        .inputsContainer {
+            flex-direction: column;
+            align-items: flex-start;
+        }
+
+        select {
+            width: 50%;
+        }
+    }
+
+}
