--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -10,6 +10,7 @@
         display: flex;
         align-items: center;
         justify-content: center;
+        flex-direction: row;
         width: 100%;
         gap: 5px;
     }
@@ -24,7 +25,7 @@
     select {
         padding: 0.5rem;
         margin: 0.5rem 0;
-        width: 10%;
+        width: 200px;
         max-width: 400px;
         border: 1px solid #ccc;
         border-radius: 4px;
@@ -60,10 +61,6 @@
 
 @media screen and (max-width: 600px) {
     .container {
-        .inputsContainer {
-            flex-direction: column;
-            align-items: flex-start;
-        }
 
         select {
             width: 50%;
