--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -5,66 +5,17 @@
     justify-content: center;
     min-height: 100vh;
     padding: 2rem;
+    color: #fff;
 
     .inputsContainer {
         display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-direction: row;
+        flex-direction: column;
+        gap: 1rem;
         width: 100%;
-        gap: 5px;
-    }
-
-    input {
-        padding: 0.5rem;
-        margin: 0.5rem 0;
-        width: 100%;
-        max-width: 400px;
-    }
-
-    select {
-        padding: 0.5rem;
-        margin: 0.5rem 0;
-        width: 200px;
-        max-width: 400px;
-        border: 1px solid #ccc;
-        border-radius: 4px;
-        background-color: #fff;
-        font-size: 16px;
-        color: #333;
-        appearance: none;
-        -webkit-appearance: none;
-        -moz-appearance: none;
-        cursor: pointer;
-        background-image: url('data:image/svg+xml;charset=US-ASCII,<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20"><path fill="none" stroke="%23333" stroke-width="2" d="M5.5 7.5L10 12l4.5-4.5"/></svg>');
-        background-repeat: no-repeat;
-        background-position: right 10px center;
-        background-size: 16px 12px;
-    }
-
-    button {
-        padding: 0.5rem 1rem;
-        background-color: #0070f3;
-        color: white;
-        border: none;
-        cursor: pointer;
-    }
-
-    button:hover {
-        background-color: #005bb5;
     }
 
     h1 {
-        color: #fff;
-    }
-}
-
-@media screen and (max-width: 600px) {
-    .container {
-
-        select {
-            width: 50%;
-        }
+        color: #000;
     }
 
 }
