--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -2,8 +2,8 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #0d1117;
     border: box-sizing;
+    background-color: darkgray;
 }
 
 .container {
