--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -5,17 +5,76 @@
     justify-content: center;
     min-height: 100vh;
     padding: 2rem;
-    color: #fff;
-
-    .inputsContainer {
-        display: flex;
-        flex-direction: column;
-        gap: 1rem;
-        width: 100%;
-    }
+    background-color: #fff;
 
     h1 {
-        color: #000;
+        font-size: 2rem;
+        margin-bottom: 1rem;
+
+        .youtube {
+            color: red;
+        }
     }
 
+    p {
+        font-size: 1rem;
+        margin-bottom: 1rem;
+    }
+
+    input {
+        padding: 0.5rem;
+        margin-bottom: 1rem;
+        width: 100%;
+        max-width: 500px;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+    }
+
+    button {
+        padding: 0.5rem 1rem;
+        background-color: #000;
+        color: white;
+        border: none;
+        cursor: pointer;
+        border-radius: 4px;
+
+        &:hover {
+            background-color: #333;
+        }
+    }
+
+    .videoDetails {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-top: 1rem;
+
+        img {
+            max-width: 100%;
+            height: auto;
+            margin-bottom: 1rem;
+        }
+
+        p {
+            font-size: 1rem;
+            margin-bottom: 1rem;
+        }
+
+        div {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            margin-bottom: 1rem;
+
+            label {
+                margin-bottom: 0.5rem;
+            }
+
+            select {
+                padding: 0.5rem;
+                border: 1px solid #ccc;
+                border-radius: 4px;
+            }
+        }
+    }
 }
