--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -2,8 +2,12 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    border: box-sizing;
-    background-color: darkgray;
+    box-sizing: border-box;
+    background-color: #f0f0f0;
+}
+
+* {
+    box-sizing: inherit;
 }
 
 .container {
@@ -19,7 +23,7 @@ input {
     padding: 0.5rem;
     margin: 0.5rem 0;
     width: 100%;
-    max-width: 400px;
+    max-width: 500px;
 }
 
 button {
@@ -28,6 +32,7 @@ button {
     color: white;
     border: none;
     cursor: pointer;
+    border-radius: 4px;
 }
 
 button:hover {
