--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -55,7 +55,7 @@
         width: 100%;
         display: flex;
         flex-direction: row;
-        align-items: center;
+        align-items: flex-start;
         justify-content: center;
         margin-top: 1rem;
         gap: 80px;
