--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -36,6 +36,7 @@
         border: 1px solid #ccc;
         border-radius: 4px;
         font-size: 14px;
+        background-color: #f5f5f5;
     }
 
     button {
@@ -111,10 +112,21 @@
             }
 
             select {
-                width: 100%;
                 padding: 15px 10px;
+                width: 158px;
                 border: 1px solid #ccc;
                 border-radius: 4px;
+                background-color: #fff;
+                font-size: 16px;
+                color: #333;
+                appearance: none;
+                -webkit-appearance: none;
+                -moz-appearance: none;
+                cursor: pointer;
+                background-image: url('data:image/svg+xml;charset=US-ASCII,<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20"><path fill="none" stroke="%23333" stroke-width="2" d="M5.5 7.5L10 12l4.5-4.5"/></svg>');
+                background-repeat: no-repeat;
+                background-position: right 10px center;
+                background-size: 16px 12px;
             }
         }
     }
