--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -103,18 +103,32 @@
             color: #404040;
         }
 
-        .downloadButton {
-            padding: 20px 40px;
-            background-color: #EC2422;
-            color: white;
-            border: none;
-            cursor: pointer;
-            border-radius: 4px;
+        .downloadContainer {
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            
+            .fileSize {
+                font-size: 12px;
+                margin: 0px !important;
+                color: #858585;
+            }
 
-            &:hover {
-                background-color: #333;
+            .downloadButton {
+                padding: 20px 40px;
+                background-color: #EC2422;
+                color: white;
+                border: none;
+                cursor: pointer;
+                border-radius: 4px;
+                margin-top: 5px;
+    
+                &:hover {
+                    background-color: #333;
+                }
             }
         }
+
 
         div {
             display: flex;
