--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -160,3 +160,58 @@
         }
     }
 }
+
+@media (max-width: 768px) {
+    .container {
+        .videoDetails {
+            flex-direction: column;
+            align-items: center;
+            gap: 20px;
+    
+            img {
+                max-width: 350px;
+            }
+
+            div {
+                select {
+                    padding: 15px 10px;
+                    width: 100%;
+                }
+            }
+    
+        }
+
+        .mainOptionsContainer {
+            width: 100%;
+        }
+
+        .downloadContainer {
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            
+            .fileSize {
+                font-size: 12px;
+                margin: 0px !important;
+                color: #858585;
+            }
+
+            .downloadButton {
+                padding: 20px 40px;
+                background-color: #EC2422;
+                color: white;
+                border: none;
+                cursor: pointer;
+                border-radius: 4px;
+                margin-top: 5px;
+    
+                &:hover {
+                    background-color: #333;
+                }
+            }
+        }
+
+        
+    }
+
+}
